<resources>
    <string name="app_name">Скорочитання</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="general_start_reading">Почати читати</string>
    <string name="general_results">Результати</string>
    <string name="general_settings">Налаштування</string>
    <string name="welcome_fragment_editText_user_name">твоє ім\'я</string>
    <string name="welcome_fragment_toast_put_user_name">Введи своє ім\'я</string>
    <string name="welcome_user_ava_dialog_fragment_button_cancel">відміна</string>
    <string name="settings_fragment_textView_text_difficulty">Складність тексту</string>
    <string name="settings_fragment_radioButton_text_diff_low">простий</string>
    <string name="settings_fragment_radioButton_text_diff_medium">середній</string>
    <string name="settings_fragment_radioButton_text_diff_high">складний</string>
    <string name="settings_fragment_textView_font_size">Розмір шрифта</string>
    <string name="settings_fragment_radioButton_font_size_big">великий</string>
    <string name="settings_fragment_radioButton_font_size_medium">середній</string>
    <string name="settings_fragment_radioButton_font_size_small">дрібний</string>
    <string name="base_activity_press_again_to_exit">Натисни ще раз назад, щоб вийти!</string>
    <string name="navigation_menu_exit_dialog_question">Ти справді хочеш вийти з додатку?</string>
    <string name="menu_navigation_item_exit">Вихід</string>
    <string name="menu_navigation_item_feedback">Залишити відгук</string>
    <string name="menu_navigation_item_title">Додатково</string>
    <string name="dialog_fragm_welcome_main_toast_bad_internet_connection">Відсутній інтернет зв\'язок або погане з\'єднення</string>
    <string name="read_section_fragment_audio_permission_request">Додатку еобхідний дозвіл на використання мікрофону</string>
    <string name="read_section_fragment_audio_permission_not_provided">Додаток не може працювати без дозволу на використання мікрофону</string>
    <string name="toolbar_info_fragment">Привіт, друже!</string>
    <string name="toolbar_button_info_ok">OK</string>
    <string name="toolbar_info_1">Привіт мій друже!</string>
    <string name="toolbar_info_2">Для роботи додатку необхідне</string>
    <string name="toolbar_info_3">хороше інтернет-з\'єднання.</string>
    <string name="toolbar_info_4">Читай в тиші, слова старайся</string>
    <string name="toolbar_info_5">вимовляти чітко.</string>
    <string name="toolbar_info_6">Для початку читання в розділі</string>
    <string name="toolbar_info_7">ПОЧАТИ ЧИТАТИ натисни СТАРТ.</string>
    <string name="toolbar_info_8">Щоб зупинити - ПАУЗУ.</string>
    <string name="toolbar_info_9">Для того, щоб розпочати читати</string>
    <string name="toolbar_info_10">зову - ПЕРЕЗАПУСК.</string>
</resources>
