<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/BaseActivity_Menu_startReadItem"
            android:icon="@drawable/ic_home_black_24px"
            android:title="@string/general_start_reading" />
        <item
            android:id="@+id/BaseActivity_Menu_resultsItem"
            android:icon="@drawable/ic_grade_black_24px"
            android:title="@string/general_results" />
    </group>

    <item android:title="@string/menu_navigation_item_title">
        <menu>
            <item
                android:id="@+id/BaseActivity_Menu_settingsItem"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/general_settings" />
            <item
                android:id="@+id/BaseActivity_Menu_feedbackItem"
                android:icon="@drawable/ic_feedback_black_24px"
                android:title="@string/menu_navigation_item_feedback" />
            <item
                android:id="@+id/BaseActivity_Menu_exitItem"
                android:icon="@drawable/ic_exit_to_app_black_24px"
                android:title="@string/menu_navigation_item_exit" />
        </menu>
    </item>
</menu>